<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainscreen"
    android:background="@drawable/dashboard_bg"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/allerta"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="36sp" />
    <TextView
        android:fontFamily="@font/allerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_back"
        />
    <TextView
        android:fontFamily="@font/allerta"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/e_mail" />

    <EditText
        android:id="@+id/mail"
        android:fontFamily="@font/allerta"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#A9141212"
        android:textSize="21sp"
        android:autofillHints="" />
    <TextView
        android:fontFamily="@font/allerta"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/pw"
        android:fontFamily="@font/allerta"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#A9141212"
        android:textSize="21sp"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/forget"
        android:fontFamily="@font/allerta"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:text="@string/forget_password"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#39A77A"
        android:fontFamily="@font/allerta"
        android:text="@string/log_in"
        android:textSize="18sp" />
    <TextView
        android:fontFamily="@font/allerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="25dp"
        android:text="@string/or_login_with" />

<!--    <LinearLayout-->
<!--        android:layout_width="@dimen/_280sdp"-->
<!--        android:layout_height="@dimen/_32sdp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:orientation="horizontal">-->


<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/google"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:fontFamily="@font/allerta"/>-->
        <ImageView
            android:id="@+id/google"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:src="@drawable/google"
            android:contentDescription="@string/google" />

    <LinearLayout
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:fontFamily="@font/allerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/_78sdp"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/new_to_fete"/>

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:fontFamily="@font/allerta"
                android:layout_marginStart="@dimen/_5sdp"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>