<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dashboard_bg"
    tools:context=".SignupScreen">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/allerta"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/allerta"
        android:layout_gravity="center"
        android:text="@string/signup_enjoy_the_best_services"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/allerta"
        android:text="@string/e_mail"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:fontFamily="@font/allerta"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#A9141212"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/allerta"
        android:text="@string/mobile"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints=""
        android:layout_gravity="center"
        android:fontFamily="@font/allerta"
        android:hint="@string/enter_mobile_no"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#A9141212"
        android:textSize="21sp" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/allerta"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints=""
        android:layout_gravity="center"
        android:fontFamily="@font/allerta"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#A9141212"
        android:textSize="21sp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/by_signing_up_you_are_agreeing_to_our"
                android:textColor="#000000"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="@string/terms_conditions"
                android:textColor="#39A77A"
                android:textSize="14sp"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:paddingStart="@dimen/_1sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:text="@string/and1"
                android:textColor="#000000"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="#39A77A"
                android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:backgroundTint="#39A77A"
        android:fontFamily="@font/allerta"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="18sp"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:fontFamily="@font/allerta"
                android:text="@string/already_a_member"
                android:textColor="#000000"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/login1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/allerta"
                android:text="@string/log_in"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>