<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:elevation="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/allerta"
                android:text="@string/harwaqt_loan"
                android:textAlignment="center"
                android:textColor="#5e62de"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/allerta"
                android:text="@string/click_here_to_apply_for_loan"
                android:textAlignment="center"
                android:textColor="#252525"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5e62de"
                android:fontFamily="@font/allerta"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/apply_now"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:elevation="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_20sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border">
                <ImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/account"
                    android:contentDescription="@string/person" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5e62de"
                    android:fontFamily="@font/allerta"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/account_details"
                    android:textSize="18sp" />
                <ImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                   android:layout_gravity="center"
                    android:background="@drawable/process"
                    android:contentDescription="@string/cycle" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5e62de"
                    android:fontFamily="@font/allerta"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/application_process"
                    android:textSize="18sp" />
                <ImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/loan_calculator"
                    android:contentDescription="@string/calculator" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5e62de"
                    android:fontFamily="@font/allerta"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/loan_calculator"
                    android:textSize="18sp" />
                <ImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/logout"
                    android:contentDescription="@string/exit" />
                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5e62de"
                    android:fontFamily="@font/allerta"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/Logout"
                    android:textSize="18sp" />
            </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>