<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_bg"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".AboutUsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Us"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_90sdp"
        android:fontFamily="@font/allerta"
        android:textSize="32sp"
        android:layout_gravity="center"/>
    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/barwaqt"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/logo">

    </ImageView>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us01"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewaboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111">

        </com.google.android.gms.ads.AdView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Our Statement"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/allerta"
            android:textSize="18sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us02"
            android:textColor="@color/black"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us03"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us04"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us05"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us06"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Service Timing: 9am-9pm Mon-Sun"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us07"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:layout_gravity="start"/>
    </LinearLayout>
    </ScrollView>



</LinearLayout>